--- a/src/components/Tooth/Tooth.css
+++ b/src/components/Tooth/Tooth.css
@@ -61,34 +61,42 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.context-menu {
+/* .context-menu {
     position: fixed;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
-}
+} */
 
-.pendingCrown {
+.Pendiente-Corona {
     position: absolute;
     clip-path: none;
     background-image: url("/images/pendingcrown.png");
 }
 
-.crown {
+.Realizado-Corona {
     position: absolute;
     clip-path: none;
     background-image: url("/images/crown.png");
 }
 
-.pendingExtraction {
+.Pendiente-Extracción {
     position: absolute;
     clip-path: none;
     background-image: url("/images/pendingextraction.png");
 }
 
-.extraction {
+.Realizado-Extracción {
     position: absolute;
     clip-path: none;
     background-image: url("/images/extraction.png");
+}
+
+.Pendiente-General {
+    background-color: blue;
+}
+
+.Realizado-General {
+    background-color: red;
 }
